--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         node: document.getElementById('elm'),
         flags: Date.now()
       });
+
+      //(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
     </script>
   </body>
 </html>
