--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,30 @@
     </div>
     <script src="./js/main.js"></script>
     <script>
+      var config;
+
+      try {
+        config = JSON.parse(localStorage.getItem("config"));
+      } catch(e) {
+        config = [
+          ["bulletMaxAge",          { val: 2,   min:   0, max:    5 }],
+          ["bulletSpeed",           { val: 10,  min:   5, max:   50 }],
+          ["canvasHeight",          { val: 600, min: 300, max: 1200 }],
+          ["canvasWidth",           { val: 800, min: 400, max: 1600 }],
+          ["creepSpeed",            { val: 1,   min:   0, max:    2 }],
+          ["heroAcc",               { val: 70,  min:  10, max:  200 }],
+          ["heroMaxSpeed",          { val: 20,  min:  10, max:  100 }],
+          ["tilesToShowLengthwise", { val: 20,  min:  10, max:  200 }],
+        ];
+      }
+
       var app = Elm.Main.init({
         node: document.getElementById('elm'),
-        flags: Date.now()
+        flags: config,
+      });
+
+      app.ports.saveConfig.subscribe(function(config) {
+        localStorage.setItem("config", JSON.stringify(config));
       });
 
       //(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
