--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             ["heroAcc",               { val: 70,  min:  10, max:  200 }],
             ["heroMaxSpeed",          { val: 20,  min:  10, max:  100 }],
             ["tilesToShowLengthwise", { val: 20,  min:  10, max:  200 }],
+            ["meterWidth",            { val: 450, min:  10, max:  800 }],
           ],
         };
       }
