--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
         localStorage.setItem("flags", JSON.stringify(flags));
       });
 
+      app.ports.hardReset.subscribe(function() {
+        localStorage.removeItem("flags");
+      });
+
       //(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
     </script>
   </body>
