Draw map gooder

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
         flags: {
           persistence: persistence,
           timestamp: Date.now(),
+          windowWidth: window.innerWidth,
+          windowHeight: window.innerHeight,
         }
       });
 
